Improve styles for sp

--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
-  <body>
+  <body class="bg-slate-100 p-4 md:p-16">
     <div>%sveltekit.body%</div>
   </body>
 </html>
